syntax = "proto3";

package user;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option go_package = "github.com/dmitriy-smirnov-0301/chat-app/auth-service/pkg/proto/user/v1;userpb";

service UserService {
    rpc Create(CreateUserRequest) returns (CreateUserResponse);
    rpc Get(GetUserRequest) returns (GetUserResponse);
    rpc List(ListUserRequest) returns (ListUserResponse);
    rpc Update(UpdateUserRequest) returns (google.protobuf.Empty);
    rpc Delete(DeleteUserRequest) returns (google.protobuf.Empty);
}

enum Role {
    ADMIN = 0;
    MODERATOR = 1;
    USER = 2;
}

message UserInfo {
    string name = 1;
    string email = 2;
    string password = 3;
    string secretword = 4;
    Role role = 5;
}

message UpdateUserInfo {
    google.protobuf.StringValue name = 1;
    google.protobuf.StringValue email = 2;
    google.protobuf.StringValue password = 3;
    google.protobuf.StringValue secretword = 4;
}

message User {
    int64 id = 1;
    string name = 2;
    string email = 3;
    Role role = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
}

message CreateUserRequest {
    UserInfo user_info = 1;
}

message CreateUserResponse {
    int64 id = 1;
}

message GetUserRequest {
    int64 id = 1;
}

message GetUserResponse {
    User user = 1;
}

message ListUserRequest {
    int64 limit = 1;
    int64 offset = 2;
}

message ListUserResponse {
    repeated User users = 1;
}

message UpdateUserRequest {
    int64 id = 1;
    UpdateUserInfo update_user_info = 2;
}

message DeleteUserRequest {
    int64 id = 1;
}
